--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -16,7 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gmaps.configure(api_key='AIzaSyCu4BBQA_f5u428YPwFB1Zls8UwFXaFN1g')"
+    "gmaps.configure(api_key='API_KEY_HERE')"
    ]
   },
   {
